[workspace]
members = ["carolina-api-macros"]

[package]
name = "carolina-api"
version = "0.1.0"
edition = "2021"

[dependencies]
carolina-api-macros = { path = "./carolina-api-macros" }
onebot-connect-interface = { path = "../onebot-connect/onebot-connect-interface", features = ["app_recv"]}
serde = "1"
thiserror = "2"
fxhash = "0.2"
log = { version = "0.4", features = ["std"] }
tokio = { version = "*", default-features = false, features = ["sync", "rt-multi-thread"] }

[features]
plugin = []
